--- a/ch#1_Exploratory Data Analysis.ipynb
+++ b/ch#1_Exploratory Data Analysis.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "3a4d734a",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "72559622",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
      "text": [
       "<>:1: SyntaxWarning: invalid escape sequence '\\S'\n",
       "<>:1: SyntaxWarning: invalid escape sequence '\\S'\n",
-      "C:\\Users\\Kamran\\AppData\\Local\\Temp\\ipykernel_2860\\1139261898.py:1: SyntaxWarning: invalid escape sequence '\\S'\n",
+      "C:\\Users\\Kamran\\AppData\\Local\\Temp\\ipykernel_15156\\1139261898.py:1: SyntaxWarning: invalid escape sequence '\\S'\n",
       "  state = pd.read_csv(\"E:\\Statistics-for-Data-Science\\population_murder_rate.csv\")\n"
      ]
     },
@@ -202,7 +202,7 @@
        "7    8     Delaware      897934          5.8           DE"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "b3da4b87",
    "metadata": {},
    "outputs": [
@@ -237,12 +237,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
+   "id": "cf9269f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: wquantiles in c:\\users\\kamran\\miniconda3\\envs\\mlatest_env\\lib\\site-packages (0.6)\n",
+      "Requirement already satisfied: numpy>=1.18 in c:\\users\\kamran\\miniconda3\\envs\\mlatest_env\\lib\\site-packages (from wquantiles) (2.2.4)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.0.1 -> 25.1.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install wquantiles\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "1549c6b4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.376359279149048\n",
+      "4.448750497554494\n",
+      "In this case, weighted mean and weighted median ae about same.\n"
+     ]
+    }
+   ],
    "source": [
-    "# 30 pages\n"
+    "# weighted mean and weighted median\n",
+    "\n",
+    "weight_mean = np.average(state['Murder rate'], weights=state['Population'])  \n",
+    "print(weight_mean)\n",
+    "import wquantiles \n",
+    "weight_median = wquantiles.median(state['Murder rate'], weights=state['Population'])\n",
+    "print(weight_median)\n",
+    "print(\"In this case, weighted mean and weighted median ae about same.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de105ee3",
+   "metadata": {},
+   "source": [
+    "### Key ideas\n",
+    "- Basic metric for location is mean, but it can be sensitive to extreme values(outlier).\n",
+    "- other metrics (median, trimmed_mean) are less sensitive to outliers and unusual distributions and hence are more robust."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24908738",
+   "metadata": {},
+   "source": [
+    "### Estimate of variability\n",
+    "- location is just one dimension in summarizing a feature.\n",
+    "- second  dimension, variability, also refered to as dispersion, measure whether data values are tightly clustered or spread out.\n",
+    "- At heart of statistics lies variability: measuring it, reducing it, distinguishing random from real variability.\n",
+    "- **Deviations:** difference between observed values and estimate of location ( errors, residuals)\n",
+    "- **variance:** sum of square deviation fro  mean divided by n-1 where n is number of data values( mean-squared-error).\n",
+    "- **standard deviation:** square root of the variance.\n",
+    "- **mean absolute deviation:** mean of absolute values of deviations from mean(l1-norm, manhattan norm).\n",
+    "- **median absolute deviation from the median:** the median of absolute values of deviations from median\n",
+    "- **Range:** difference between largest and smallest value in a data set.\n",
+    "-** order statistics: **metrics based on data values sorted from smallest to biggest(ranks).\n",
+    "- **percentile:** value such that P percent of values take on this value or less and (100 - P) percent take on this values or more(quantile).\n",
+    "- **Inter-quantile range:** difference between 75th percentile and 25th percentile(IQR).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65a769de",
+   "metadata": {},
+   "source": [
+    "### Degree of freedom\n",
+    "- if we use intuitive denominator of 'n' in the variance formula, you will underestimate true value of variance and standard deviation in population. this is referred to as a biased estimate.\n",
+    "- however, if we divide by 'n-1' instead of 'n', the variance becomes unbiased estimate\n",
+    "- For most problems, data scientists do not need worry about degree of freedom.\n",
+    "- the variance and standard deviation are especially sensitive to outliers since they are based on squared deviations.\n",
+    "- A robust estimate of variability is the median absolute deviation from the median or MAD."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e28897e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean of the data is: 4.5\n",
+      "median of the data is: 4.0\n",
+      "25th percentile of the data is: 2.75\n",
+      "75th percentile of the data is: 6.25\n",
+      "Iqr is: 3.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Simple example in sorted order\n",
+    "data = [1,2,3,3,5,6,7,9]\n",
+    "print(f\"mean of the data is: {np.mean(data)}\")\n",
+    "print(f\"median of the data is: {np.median(data)}\")\n",
+    "print(f\"25th percentile of the data is: {np.percentile(data, 25)}\")\n",
+    "print(f\"75th percentile of the data is: {np.percentile(data, 75)}\")\n",
+    "print(f\"Iqr is: {np.percentile(data, 75) - np.percentile(data, 25)}\") # iqr = q3 - q1\n"
    ]
   }
  ],
